style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap');

html {
    width: 100%vh;
    scroll-behavior: smooth;
}
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    width: 100%;
    background-color: #151718;
    color: white;
}

header {
    font-size: larger;
    text-align: center;
    padding: 0;
}

header div:hover {
    background-color: #2d3031;
}

header div {
    background-color: #1d1f20;
    margin: .35em 0;
    width: 99%;
}

header a {
    display: block;
    padding: .5em .4em;
    width: 100%;
    height: 100%;
    text-decoration: none;
    color: white;
}

.intro {
    margin: 3em auto;
    padding: 1em 1em;
    text-align: center;
    font-size:medium;
}

.intro .print {
    text-align: left;
    margin-left: 0.8em;
    margin-bottom: 3em;
    font-family: 'Roboto Mono', monospace;
    font-size: x-large;
}

.intro .name-stack {
    font-size: large;
}
.intro .my-pic img {
    margin: 2em 0em;
    width: 20em;
    height: 20em;
    border-radius: 50%;
}

/* Tooltip container */
.tooltip {
    position: relative;
    display: inline-block;
    /* border-bottom: 1px dotted rgba(168, 168, 168, .85); If you want dots under the hoverable text */
}
  
  /* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: rgba(168, 168, 168, .85);
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;

    /* Position the tooltip text - see examples below! */
    bottom: 120%;
    left: 50%;
    margin-left: -60px;
    position: absolute;
    z-index: 1;
}
  
/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible;
}

.tooltip .tooltiptext::after {
    content: " ";
    position: absolute;
    top: 100%; /* At the bottom of the tooltip */
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: rgba(168, 168, 168, .85) transparent transparent transparent;
}

.intro  .links {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: .5em auto;
}

.intro  .links a {
    margin: .2em .25em;
}

.intro  .links img {
    width: 2.5em;
    height: 2.5em;
}

.about {
    background-color: #2c4669;
    text-align: center;
}

.about h2 {
    font-family: 'Roboto Mono', monospace;
    font-size: xx-large;
    font-weight: bolder;
    color: rgb(179, 179, 214);
    padding-top: 3em;
}

.about p {
    padding: 1em 2em 12em 2em;
    font-size: large;

}

.skills {
    background-color: rgb(207, 216, 231);
    margin: -10em 2.5em 1em 2.5em;
    box-shadow: 0 0 6px 8px rgba(56, 63, 83, 0.445);
    border-radius: .5em;
    text-align: center;
    color: rgb(33, 41, 41);
}

.skills .icon {
    width: 6em;
    height: 6em;
}

.ul-center {
    text-align: center;
}

.skills .ab {
    color: rgb(62, 96, 160);
    margin: .1em .5em;
}
.skills ul {
    margin-top: .1em;
    display: inline-block;
    font-size: large;
    list-style-type: none;
    text-align: left;
    color: rgb(62, 96, 160);
}

.skills li {
    margin-top: 0.17em;
}
.skills .title {
    font-size: large;
    font-weight: bold;
    padding-bottom: .1em;
}

.skills .backend, .devops {
    padding: 3em 0;
    border-bottom: .1em solid rgba(177, 185, 199, 0.555);
}

.skills .other {
    padding: 3em 0;
}

.resume {
    text-align: center;
    margin: 6em auto;
}

.resume .rsmcont {
    margin: 4em 0;
}
.resume a {
    text-decoration: none;
    background-color: rgb(80, 80, 187);
    font-weight: bold;
    /* font-size: large; */
    color: white;
    margin: 0 .5em;
    padding: 1em 3em;
    border-radius: .5em;
}

.resume a:hover {
    background-color: rgb(144, 144, 192);

}

#myBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 10px; /* Place the button at the bottom of the page */
    right: 15px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: rgb(112, 119, 139); /* Set a background color */
    color: white; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 5px; /* Some padding */
    border-radius: 10px; /* Rounded corners */
}

#myBtn img {
    width: 3em;
    height: 3em;
}
  
#myBtn:hover {
    background-color: #555; /* Add a dark-grey background on hover */
}

.contact {
    text-align: center;
    margin: auto;
}

.contact p {
    font-size: large;
    margin: .1em .5em;
}

.contact a {
    margin: 1.2em 3em;
    padding: 1em 2em;
    display: block;
    background-color: white;
    color: #151718;
    text-decoration: none;
    border-radius: .5em;

}

footer {
    text-align: center;
    margin-top: 5em;
}

@media (min-width: 1000px) {
    header div {
        display: inline-block;
        width: 24%;
    }
    
    .about p {
        padding: 1em 12em 12em 12em;

    }

    .skills {
        display: flex;

    }

    .skills .backend, .devops, .other {
        width: 30%;
        height: 100%;
        border-bottom: none;
        flex-grow: 1;
        flex-basis: 0;
    }

    .skills .backend, .devops {
        border-right: .1em solid rgba(177, 185, 199, 0.555);
    }

    .skills .devops .ul-center, .other .ul-center {
        padding-top: 1em;
        padding-bottom: 2em;
    }
    .skills .devops .ab {
        padding-top: 1.4em;
        padding-bottom: 1em;
    }
    .skills .devops h3, .other h3 {
        padding-top: 1.5em;
        padding-bottom: 1em;
    } 
    
    .contact {
        width: 55em;
    }
}

@media (min-width: 1500px) {
    .about p {
        padding: 1em 17em 12em 17em;

    }
}

